[package]
name = "zookeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
const_format = "0.2"
human_bytes = "0.4"
memory-stats = "1"
once_cell = "1.19"
poise = "0.6.1"
rand = "0.8"
regex = "1"
reqwest = { version = "*", features = ["json", "brotli", "gzip", "deflate"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
