[package]
name = "zookeeper"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
const_format = "0.2"
human_bytes = "0.4"
memory-stats = "1"
once_cell = "1.19"
poise = "0.6"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serenity = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["fast-rng", "v4"] }

[dependencies.reqwest]
version = "*"
default-features = false
features = ["rustls", "json", "brotli", "gzip", "deflate"]

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8.3", features = ["build", "rustc"] }

[profile.dev.package."*"]
opt-level = 2
debug = false
